--- a/score_quint.Rmd
+++ b/score_quint.Rmd
@@ -4,25 +4,164 @@ output: html_document
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+dir_data <- "D:/HOME/ekamir/scoring_medscope/data/emmah" 
+dir_plot <- "D:/HOME/ekamir/scoring_medscope/figure" 
+
+library(easyVerification)
+library(verification)
+library(dplyr)
+library(stats)
+library(SpecsVerification)
+library(s2dverification)
+library(foreach)
+library(iterators)
+library(parallel)
+library(doParallel)
+library(readr)
+library(purrr)
+
+no_core <- 6
+ev <- 5
+nboot <- 100
+indic_period <- c("ET", "DRAIN") # issues working with other indicators
+
 ```
 
-## R Markdown
+                                            ### NOT CROP SPECIFIC ###
+                                            
+                                            
+## Gridded scores
 
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
+Scores computed for each grid separately.
+Indicators are assessed on a 28 days time window and over the whole season
 
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
+```{r}
 
-```{r cars}
-summary(cars)
+
+tictoc::tic()
+
+for (indicateur in indic_period){
+  
+  cl <- makeCluster(no_core)
+  registerDoParallel(cl)
+
+foreach(b=1:nboot, .packages = 'easyVerification') %dopar%  { # loop on bootstrap samples
+
+  nom_ref <- paste0(indicateur,b,"_ref.RData")
+  nom_prev <- paste0(indicateur,b,"_prev.RData")
+
+  load(file = file.path(dir_data, "extract", nom_ref))
+  load(file = file.path(dir_data, "extract", nom_prev))
+  
+  ngrids <- dim(array_obs)[1]
+  ndimT <- dim(array_obs)[3]
+
+  scoreprob_seas_ps <- array (NA, dim=c(ngrids,e))
+    
+  # seasonal: WARNING WITH AGREGATION METHOD!!!!
+  seas_obs <- apply(array_obs[,,9:20],c(1,2), sum)
+  seas_prev <- apply(array_prev[,,,9:20],c(1,2,3), sum)
+  scoreprob_seas_ps[,1] <- veriApply("EnsRoca", fcst=seas_prev, obs=seas_obs, prob=1:4/5, parallel = TRUE)$cat1 
+  scoreprob_seas_ps[,2] <- veriApply("EnsRoca", fcst=seas_prev, obs=seas_obs, prob=1:4/5, parallel = TRUE)$cat5 
+   
+  nom_prevseas <- paste0(indicateur, b,"scorequintseason_grid_prev.RData")
+
+  save(scoreprob_seas_ps, file = file.path(dir_data, "score", nom_prevseas))
+
+  }
+  
+stopCluster(cl)
+
+}
+
+tictoc::toc()
+
+
+
 ```
 
-## Including Plots
+                                             ### NOT CROP SPECIFIC ###
+    
+    
+## Box-agregated scores
 
-You can also embed plots, for example:
+Aggregation computed using latitude weighting
 
-```{r pressure, echo=FALSE}
-plot(pressure)
+```{r}
+
+tictoc::tic()
+
+for (indicateur in indic_period){
+
+  list_boot2 <- list()
+  
+  load(file = file.path(dir_data, "extract", paste0("lat_",indicateur,".RData")))
+
+  for (b in 1:nboot){
+    
+    nom_prevseas <- paste0(indicateur,b,"_seasquint_prev.RData")
+    nom_refseas <- paste0(indicateur,b,"_seasquint_obs.RData")
+    load(file = file.path(dir_data, "extract", nom_prevseas))
+    load(file = file.path(dir_data, "extract", nom_refseas))
+    
+    vect_event2 <- vector()
+    for (e in 1:5){ #LT,MT,HT
+      
+      vect_event2[e] <- score_boite_prob(seasprob_ps, seasbin_ref, lat, nb_bin = 5, e)$AUC # seasonal 
+  
+      }
+ 
+   list_boot2[[b]] <- vect_event2 # seasonal 
+  
+  }
+ 
+  nom_seas <- paste0(indicateur,"boxquint_seas.RData")
+  save(list_boot2, file = file.path(dir_data, "score", nom_seas))
+
+}
+
+tictoc::toc()
+
 ```
 
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
+
+## Box-agregated score analysis
+
+Transform lists in a more handy format
+
+```{r}
+
+for (indicateur in indic_period){
+  
+   # season
+  nom_ps <- paste0(indicateur,"boxquint_seas.RData")
+  load(file = file.path(dir_data, "score", nom_ps))
+  
+  sum_seas <- apply(array(unlist(list_boot2) , c(ev,nboot)), 1, mean, na.rm = T)
+  
+  nom_seas <- paste0(indicateur,"avboxquint_seas.csv")
+  write_csv(as.data.frame(sum_seas), file.path(dir_data, "score", nom_seas))
+  
+}
+
+```
+## Box score significance test
+
+Wilcoxon test with H0: AUC non supérieure à 0.5
+
+```{r}
+indicateur <- "ET"
+indicateur <- "DRAIN"
+
+   # season
+  nom_seas <- paste0(indicateur,"boxquint_seas.RData")
+  load(file = file.path(dir_data, "score", nom_seas))
+  
+  boxboot <- array(unlist(list_boot2) , c(ev,nboot))
+  
+   wilcox.test(boxboot[1,], mu = 0.5, alternative = "greater", conf.level = 0.95, na.action = na.omit)$p.value
+   wilcox.test(boxboot[5,], mu = 0.5, alternative = "greater", conf.level = 0.95, na.action = na.omit)$p.value
+
+
+```
+
