--- a/anomaly.Rmd
+++ b/anomaly.Rmd
@@ -4,7 +4,7 @@ output: html_document
 ---
 
 ```{r setup, include=FALSE}
-dir_data <- "D:/HOME/ekamir/scoring_medscope/data/emmah" 
+dir_data <- "D:/HOME/ekamir/scoring_medscope/data/stics" 
 dir_plot <- "D:/HOME/ekamir/scoring_medscope/figure" 
 
 library(easyVerification)
@@ -18,17 +18,66 @@ library(doParallel)
 
 no_core <- 6
 nboot <- 100
-indicateur <- c("ET","DRAIN")
+quinzn <- 9:20 # selected quinzaines de [9;20]
+
 ```
 
-## Loading files
+## Indicator without t dimension
 
 We load values previously extracted and compute ensemble means (mean between runs = models), which is required to compute deterministic scores. Values are stored in 2 3 dimensionial arrays (grids+years+t), one for prevision and one for climatology.
 N.B.: 831.22 sec elapsed
 
 ```{r, echo=FALSE}
 
-for (indicateur in indic_period){
+indicateur <- "grassyieldC1C2_"
+
+  cl <- makeCluster(no_core)
+  registerDoParallel(cl)
+  tictoc::tic()
+  foreach(b=1:nboot, .packages="tidyverse") %dopar%  { # loop on bootstrap samples
+  
+    nom_ref <- paste0(indicateur,b,"_ref.RData")
+    nom_prev <- paste0(indicateur,b,"_prev.RData")
+
+    load(file = file.path(dir_data, "extract", nom_ref))
+    load(file = file.path(dir_data, "extract", nom_prev))
+
+    ngrids <- dim(array_obs)[1]
+
+    # CROSS VALIDATED ANOMALIES: we compute and save arrays of anomalies using cross validation scheme
+    
+    prev_anomaly <- array(NA,dim=c(ngrids,nan,nrun))
+    obs_anomaly <- array(NA,dim=c(ngrids,nan))
+    
+    for (y in 1:nan){
+      cv_mean_prev <- apply(array_prev[,-y,], c(1,3), mean)
+      cv_mean_obs <- apply(array_obs[,-y], 1, mean)
+  
+      prev_anomaly[,y,] <- array_prev[,y,]-cv_mean_prev
+      obs_anomaly[,y] <- array_obs[,y]-cv_mean_obs
+    
+  }
+
+  nom_prev <- paste0(indicateur,b,"_anomaly_prev.RData")
+  nom_obs <- paste0(indicateur,b,"_anomaly_obs.RData")
+
+  save(prev_anomaly, file = file.path(dir_data, "extract", nom_prev))
+  save(obs_anomaly, file = file.path(dir_data, "extract", nom_obs))
+  
+}
+stopCluster(cl)
+
+tictoc::toc() 
+
+```
+## Indicator with t dimension
+
+We load values previously extracted and compute ensemble means (mean between runs = models), which is required to compute deterministic scores. Values are stored in 2 3 dimensionial arrays (grids+years+t), one for prevision and one for climatology.
+N.B.: 831.22 sec elapsed
+
+```{r, echo=FALSE}
+
+indicateur <- "bilanhydr"
 
   cl <- makeCluster(no_core)
   registerDoParallel(cl)
@@ -49,8 +98,8 @@ for (indicateur in indic_period){
     prev_anomaly <- array(NA,dim=c(ngrids,nan,nrun))
     obs_anomaly <- array(NA,dim=c(ngrids,nan))
     
-    prev_seas <- apply(array_prev[,,,9:20], c(1,2,3), sum) #### aggregation method to be changed!!
-    ref_seas <- apply(array_obs[,,9:20], c(1,2), sum)
+    prev_seas <- apply(array_prev[,,,quinzn], c(1,2,3), sum) #### aggregation method to be changed!! - TIME PERIOD SELECTION!!!!
+    ref_seas <- apply(array_obs[,,quinzn], c(1,2), sum)
 
     for (y in 1:nan){
       cv_mean_prev <- apply(prev_seas[,-y,], c(1,3), mean)
@@ -69,8 +118,6 @@ for (indicateur in indic_period){
   
 }
 stopCluster(cl)
-
-}
 
 tictoc::toc() 
 
