--- a/score_terc.Rmd
+++ b/score_terc.Rmd
@@ -4,7 +4,7 @@ output: html_document
 ---
 
 ```{r setup, include=FALSE}
-dir_data <- "D:/HOME/ekamir/scoring_medscope/data/emmah" 
+dir_data <- "D:/HOME/ekamir/scoring_medscope/data/stics" 
 dir_plot <- "D:/HOME/ekamir/scoring_medscope/figure" 
 
 library(easyVerification)
@@ -24,7 +24,8 @@ no_core <- 6
 ev <-3 
 
 nboot <- 100
-indic_period <- c("ET", "DRAIN") # issues working with other indicators
+indicatOrs <- c("grassyieldC1C2_", "bilanhydr")
+quinzn <- 9:20 # selected quinzaines de [9;20]
 
 ```
 
@@ -38,10 +39,9 @@ Indicators are assessed on a 28 days time window and over the whole season
 
 ```{r}
 
-
 tictoc::tic()
 
-for (indicateur in indic_period){
+for (indicateur in indicatOrs){
   
   cl <- makeCluster(no_core)
   registerDoParallel(cl)
@@ -59,10 +59,13 @@ foreach(b=1:nboot, .packages = 'easyVerification') %dopar%  { # loop on bootstra
 
   scoreprob_seas_ps <- array (NA, dim=c(ngrids,e))
     
-
   # seasonal: WARNING WITH AGREGATION METHOD!!!!
-  seas_obs <- apply(array_obs[,,9:20],c(1,2), sum)
-  seas_prev <- apply(array_prev[,,,9:20],c(1,2,3), sum)
+  if (indicateur=="bilanhydr"){
+  seas_obs <- apply(array_obs[,,quinzn],c(1,2), sum)
+  seas_prev <- apply(array_prev[,,,quinzn],c(1,2,3), sum)
+  }
+  else {seas_obs <- array_obs; seas_prev <- array_prev}
+  
   scoreprob_seas_ps[,1] <- veriApply("EnsRoca", fcst=seas_prev, obs=seas_obs, prob=1:2/3, parallel = TRUE)$cat1 
   scoreprob_seas_ps[,2] <- veriApply("EnsRoca", fcst=seas_prev, obs=seas_obs, prob=1:2/3, parallel = TRUE)$cat3 
    
@@ -92,7 +95,7 @@ Aggregation computed using latitude weighting
 ```{r}
 tictoc::tic()
 
-for (indicateur in indic_period){
+for (indicateur in indicatOrs){
 
   list_boot2 <- list()
   
@@ -107,7 +110,7 @@ for (indicateur in indic_period){
     vect_event2 <- vector()
     for (e in 1:3){ #LT,MT,HT
       
-      vect_event2[e] <- score_boite_prob(seasprob_ps, seasbin_ref, lat, nb_bin = 5, e)$AUC # seasonal 
+      vect_event2[e] <- score_boite_prob(seasprob_ps, seasbin_ref, lat, nb_bin = 10, e)$AUC # seasonal 
   
       }
  
@@ -122,6 +125,9 @@ for (indicateur in indic_period){
 
 tictoc::toc()
 
+
+#roc.plot(x = seasbin_ref[12,,1], pred = seasprob_ps[12,,1], threshold = seq(0,1, 0.2)) 
+
 ```
 
 
@@ -131,7 +137,7 @@ Transform lists in a more handy format
 
 ```{r}
 
-for (indicateur in indic_period){
+for (indicateur in indicatOrs){
   
    # season
   nom_ps <- paste0(indicateur,"boxterc_seas.RData")
@@ -150,7 +156,7 @@ for (indicateur in indic_period){
 Wilcoxon test with H0: AUC non supérieure à 0.5
 
 ```{r}
-indicateur <- "ET"
+indicateur <- "bilanhydr"
 indicateur <- "DRAIN"
 
    # season
@@ -160,7 +166,7 @@ indicateur <- "DRAIN"
   boxboot <- array(unlist(list_boot2) , c(ev,nboot))
   
    wilcox.test(boxboot[1,], mu = 0.5, alternative = "greater", conf.level = 0.95, na.action = na.omit)$p.value
-   wilcox.test(boxboot[2,], mu = 0.5, alternative = "greater", conf.level = 0.95, na.action = na.omit)$p.value
+   wilcox.test(boxboot[3,], mu = 0.5, alternative = "greater", conf.level = 0.95, na.action = na.omit)$p.value
 
 
 ```
