--- a/anomaly.Rmd
+++ b/anomaly.Rmd
@@ -1,11 +1,12 @@
 ---
-title: "Anomaly transformation"
+title: "Cross anomalies"
 output: html_document
 ---
 
 ```{r setup, include=FALSE}
+
 dir_data <- "D:/HOME/ekamir/scoring_medscope/data/stics" 
-dir_plot <- "D:/HOME/ekamir/scoring_medscope/figure" 
+dir_plot <- "D:/HOME/ekamir/scoring_medscope/figure"
 
 library(easyVerification)
 library(verification)
@@ -16,50 +17,76 @@ library(iterators)
 library(parallel)
 library(doParallel)
 
+```
+## Parameters 
+
+```{r }
+
+# bootstrap and cores
 no_core <- 6
 nboot <- 100
-quinzn <- 9:20 # selected quinzaines de [9;20]
+
+# variables
+indicateurs <- c("drainall", "etall", "yieldwheat", "yieldgrass", "yieldgrassC2C3")
+  # temporalité
+  if (indicateur=="yieldwheat"|indicateur=="yieldgrass"|indicateur=="yieldgrassC2C3"){
+      temporalite <- "yearly"
+  }else {temporalite <- "quinzaine"}
+
+# temporal agregation
+temp <- 9:20
 
 ```
-
-## Indicator without t dimension
+## Loading files
 
 We load values previously extracted and compute ensemble means (mean between runs = models), which is required to compute deterministic scores. Values are stored in 2 3 dimensionial arrays (grids+years+t), one for prevision and one for climatology.
 N.B.: 831.22 sec elapsed
 
 ```{r, echo=FALSE}
 
-indicateur <- "grassyieldC1C2_"
-
-  cl <- makeCluster(no_core)
-  registerDoParallel(cl)
-  tictoc::tic()
-  foreach(b=1:nboot, .packages="tidyverse") %dopar%  { # loop on bootstrap samples
+for (indicateur in indicateurs){
   
-    nom_ref <- paste0(indicateur,b,"_ref.RData")
-    nom_prev <- paste0(indicateur,b,"_prev.RData")
+cl <- makeCluster(no_core)
+registerDoParallel(cl)
+tictoc::tic()
 
-    load(file = file.path(dir_data, "extract", nom_ref))
-    load(file = file.path(dir_data, "extract", nom_prev))
-
-    ngrids <- dim(array_obs)[1]
-
-    # CROSS VALIDATED ANOMALIES: we compute and save arrays of anomalies using cross validation scheme
-    
-    prev_anomaly <- array(NA,dim=c(ngrids,nan,nrun))
-    obs_anomaly <- array(NA,dim=c(ngrids,nan))
-    
-    for (y in 1:nan){
-      cv_mean_prev <- apply(array_prev[,-y,], c(1,3), mean)
-      cv_mean_obs <- apply(array_obs[,-y], 1, mean)
+foreach(b=1:nboot, .packages="tidyverse") %dopar%  { # loop on bootstrap samples
   
-      prev_anomaly[,y,] <- array_prev[,y,]-cv_mean_prev
-      obs_anomaly[,y] <- array_obs[,y]-cv_mean_obs
+  nom_ref <- paste0(indicateur,b,"_ref_uerra5.RData")
+  nom_prev <- paste0(indicateur,b,"_prev_uerra5.RData")
+  nom_clim <- paste0(indicateur,b,"_clim_uerra5.RData")
+  
+  load(file = file.path(dir_data, "extract", nom_ref))
+  load(file = file.path(dir_data, "extract", nom_prev))
+  load(file = file.path(dir_data, "extract", nom_clim))
+
+  ngrids <- dim(array_obs)[1]
+
+  # CROSS VALIDATED ANOMALIES: we compute and save arrays of anomalies using cross validation scheme
+  
+  if (temporalite=="yearly"){
+  prev_seas <- array_prev 
+  ref_seas <- array_obs
+  } else if (temporalite=="quinzaine") {
+    prev_seas <- apply(array_prev[,,,temp], c(1,2,3), sum) #### aggregation method to be changed!!
+    ref_seas <- apply(array_obs[,,temp], c(1,2), sum)
+  }
+  
+  prev_anomaly <- array(NA,dim=c(ngrids,nan,nrun))
+  obs_anomaly <- array(NA,dim=c(ngrids,nan))
+
+  for (y in 1:nan){
+    cv_mean_prev <- apply(prev_seas[,-y,], c(1,3), mean)
+    cv_mean_obs <- apply(ref_seas[,-y], 1, mean)
+
+    prev_anomaly[,y,] <- prev_seas[,y,]-cv_mean_prev
+    obs_anomaly[,y] <- ref_seas[,y]-cv_mean_obs
     
   }
+  
 
-  nom_prev <- paste0(indicateur,b,"_anomaly_prev.RData")
-  nom_obs <- paste0(indicateur,b,"_anomaly_obs.RData")
+  nom_prev <- paste0(indicateur,b,"_anomaly_prev_uerra5.RData")
+  nom_obs <- paste0(indicateur,b,"_anomaly_obs_uerra5.RData")
 
   save(prev_anomaly, file = file.path(dir_data, "extract", nom_prev))
   save(obs_anomaly, file = file.path(dir_data, "extract", nom_obs))
@@ -67,57 +94,7 @@ indicateur <- "grassyieldC1C2_"
 }
 stopCluster(cl)
 
-tictoc::toc() 
-
-```
-## Indicator with t dimension
-
-We load values previously extracted and compute ensemble means (mean between runs = models), which is required to compute deterministic scores. Values are stored in 2 3 dimensionial arrays (grids+years+t), one for prevision and one for climatology.
-N.B.: 831.22 sec elapsed
-
-```{r, echo=FALSE}
-
-indicateur <- "bilanhydr"
-
-  cl <- makeCluster(no_core)
-  registerDoParallel(cl)
-  tictoc::tic()
-  foreach(b=1:nboot, .packages="tidyverse") %dopar%  { # loop on bootstrap samples
-  
-    nom_ref <- paste0(indicateur,b,"_ref.RData")
-    nom_prev <- paste0(indicateur,b,"_prev.RData")
-
-    load(file = file.path(dir_data, "extract", nom_ref))
-    load(file = file.path(dir_data, "extract", nom_prev))
-
-    ngrids <- dim(array_obs)[1]
-    ndimT <- dim(array_obs)[3]
-
-    # CROSS VALIDATED ANOMALIES: we compute and save arrays of anomalies using cross validation scheme
-    
-    prev_anomaly <- array(NA,dim=c(ngrids,nan,nrun))
-    obs_anomaly <- array(NA,dim=c(ngrids,nan))
-    
-    prev_seas <- apply(array_prev[,,,quinzn], c(1,2,3), sum) #### aggregation method to be changed!! - TIME PERIOD SELECTION!!!!
-    ref_seas <- apply(array_obs[,,quinzn], c(1,2), sum)
-
-    for (y in 1:nan){
-      cv_mean_prev <- apply(prev_seas[,-y,], c(1,3), mean)
-      cv_mean_obs <- apply(ref_seas[,-y], 1, mean)
-  
-      prev_anomaly[,y,] <- prev_seas[,y,]-cv_mean_prev
-      obs_anomaly[,y] <- ref_seas[,y]-cv_mean_obs
-    
-  }
-
-  nom_prev <- paste0(indicateur,b,"_anomaly_prev.RData")
-  nom_obs <- paste0(indicateur,b,"_anomaly_obs.RData")
-
-  save(prev_anomaly, file = file.path(dir_data, "extract", nom_prev))
-  save(obs_anomaly, file = file.path(dir_data, "extract", nom_obs))
-  
 }
-stopCluster(cl)
 
 tictoc::toc() 
 
