--- a/exploration.Rmd
+++ b/exploration.Rmd
@@ -1,11 +1,11 @@
 ---
-title: "Data exploration"
+title: "Exploration"
 output: html_document
 ---
 
 ```{r setup, include=FALSE}
-dir_data <- "D:/HOME/ekamir/scoring_medscope/data/stics" 
 
+dir_data <- "D:/HOME/ekamir/scoring_medscope/data/stics" 
 dir_plot <- "D:/HOME/ekamir/scoring_medscope/figure" 
 
 library(s2dverification)
@@ -13,6 +13,38 @@ library(stats)
 library(s2dverification)
 library(ggplot2)
 library(CSTools)
+library(fanplot)
+library(dplyr)
+library(ggfan)
+
+```
+
+## Parameters 
+
+```{r }
+
+# variable
+indicateurs <- c("drainall", "etall", "yieldwheat", "yieldgrass", "yieldgrassC2C3")
+indicateur <- indicateurs[5]
+  ### temporalité
+  if (indicateur=="yieldwheat"|indicateur=="yieldgrass"|indicateur=="yieldgrassC2C3"){
+      temporalite <- "yearly"
+  }else {temporalite <- "quinzaine"}
+  
+# grid
+maille <- 4
+
+# temporal aggregation
+temp <- 9:20 
+
+# bootstrap and cores
+no_core <- 6
+nboot <- 100
+
+# trick to get automatically number of grids 
+nom_ref <- paste0(indicateur,1,"_ref_uerra5.RData")
+load(file = file.path(dir_data, "extract", nom_ref))
+ngrids <- dim(array_obs)[1]
 
 ```
 
@@ -21,19 +53,18 @@ library(CSTools)
 we have to do a trick to find out the first bootstrapped iteration and the run index whithin this iteration matching the year we are interested in (the random sampling doesn't respect chronology)
 
 ```{r }
-indicateur <- "DRAIN"
-load(file = file.path(dir_data, "extract", "years.RData")) # list of years in each bootstrap iteration
 
-nom_ref <- paste0(indicateur,1,"_ref.RData")
-load(file = file.path(dir_data, "extract", nom_ref))
-ngrids <- dim(array_obs)[1]
+                                            ### WITH TIME DIMENSION ###
+if (temporalite=="quinzaine"){
 
-ps_original <- array(NA, dim=c(ngrids, nan, nrun, ndimT))
-ref_original <- array(NA, dim=c(ngrids, nan, ndimT))
+ps_original <- array(NA, dim=c(ngrids, nan, nrun, ntemp))
+ref_original <- array(NA, dim=c(ngrids, nan, ntemp))
 
  for (year in an){
  y <- which(an==year)
+
        # bootstrap iteration index of the year selected
+    load(file = file.path(dir_data, "extract", "years.RData")) # list of years in each bootstrap iteration
      
     list_match <- lapply(rand_year, function(x) which(year == x)) # list of matchs between list of years randomly generated for the bootstrap and the year we are interested in
      
@@ -44,64 +75,143 @@ ref_original <- array(NA, dim=c(ngrids, nan, ndimT))
        else {y_index <- y_index; b_index <- b_index}
      }
      
-  nom_prev <- paste0(indicateur,b_index,"_prev.RData")
+  nom_prev <- paste0(indicateur,b_index,"_prev_uerra5.RData")
   load(file = file.path(dir_data, "extract", nom_prev))
-  ps_original[,y,,] <- array_prev[,y_index[1],,]
+  ps_original[,y,,] <- array_prev[,y_index[1],,temp]
   
-  nom_ref <- paste0(indicateur,b_index,"_ref.RData")
+  nom_ref <- paste0(indicateur,b_index,"_ref_uerra5.RData")
   load(file = file.path(dir_data, "extract", nom_ref))
-  ref_original[,y,] <- array_obs[,y_index[1],]
+  ref_original[,y,] <- array_obs[,y_index[1],temp]
 }
 
+
+                                            ### WITHOUT TIME DIMENSION ###
+} else if (temporalite=="yearly"){
+
+
+ps_original <- array(NA, dim=c(ngrids, nan, nrun))
+ref_original <- array(NA, dim=c(ngrids, nan))
+
+ for (year in an){
+ y <- which(an==year)
+
+       # bootstrap iteration index of the year selected
+    load(file = file.path(dir_data, "extract", "years.RData")) # list of years in each bootstrap iteration
+     
+    list_match <- lapply(rand_year, function(x) which(year == x)) # list of matchs between list of years randomly generated for the bootstrap and the year we are interested in
+     
+     y_index <- list_match[[1]] # year index within the bootstrap iteration
+     b_index <- 1 # bootstrap iteration index
+     for (b in 1:(nboot-1)){ # pick the first iteration and first index matching the year we are looking for
+       if (length(list_match[[b]])<1 & length(y_index)<1) {y_index <- list_match[[b+1]]; b_index <- b+1}
+       else {y_index <- y_index; b_index <- b_index}
+     }
+     
+  nom_prev <- paste0(indicateur,b_index,"_prev_uerra5.RData")
+  load(file = file.path(dir_data, "extract", nom_prev))
+  ps_original[,y,] <- array_prev[,y_index[1],]
+  
+  nom_ref <- paste0(indicateur,b_index,"_ref_uerra5.RData")
+  load(file = file.path(dir_data, "extract", nom_ref))
+  ref_original[,y] <- array_obs[,y_index[1]]
+}
+
+}
 ```
-## Plotting seasonal prevision and observation
+
+## Data aggregation
+We compute temporal and ensemble aggregation: temporal can be a mean or a sum - ensemble mean always
+
+```{r }
+                                            ### WITH TIME DIMENSION ###
+if (temporalite=="quinzaine"){
+
+ps_agreg <- apply(ps_original[,,,], c(1,2,3), sum)
+ps_gridmean <- apply(ps_agreg, c(2,3), mean)
+ps_ensmean <- apply(ps_agreg, c(1,2), mean)
+ps_original <- ps_agreg
+ref_agreg <- apply(ref_original[,,], c(1,2), sum)
+ref_gridmean <- apply(ref_agreg, 2, mean)
+ref_original <- ref_agreg
+                                            ### WITHOUT TIME DIMENSION ###
+} else if (temporalite=="yearly"){
+
+ps_gridmean <- apply(ps_original, c(2,3), mean)
+ps_ensmean <- apply(ps_original, c(1,2), mean)
+ref_gridmean <- apply(ref_original, 2, mean)
+}
+```
+
+## Nuage de points
 
 Attention sum ou mean selon indicateur!
 
 ```{r }
 
-ps_season_int <- apply(ps_original[,,,9:20], c(1,2,3), sum)
-ps_season <- apply(ps_season_int, 2, mean)
-ref_season_int <- apply(ref_original[,,9:20], c(1,2), sum)
-ref_season <- apply(ref_season_int, 2, mean)
+# re shaping data: we put them in a table with 3 columns: type(ref or prevision) - year - value 
+df_raw <- data.frame() 
 
-df_raw <- data.frame()
 for (y in 1:nan){
 
-  df_raw <- rbind(df_raw, data.frame(type = "prevision", year=an[y], value = ps_season[y]))
-  df_raw <- rbind(df_raw, data.frame(type = "ref", year=an[y], value = ref_season[y]))
+  df_raw <- rbind(df_raw, data.frame(type = "prevision", year=an[y], value = ps_gridmean[y,]))
+  df_raw <- rbind(df_raw, data.frame(type = "ref", year=an[y], value = ref_gridmean[y]))
 
 }
-#aes(fill=type, colour=type)
-ggplot(df_raw, aes(x=year, y=value,  fill=type)) + geom_bar(stat = "identity", position = "dodge")+
-  labs(title = paste0(indicateur, " seasonal aggregation"), x="Year", y= "Value")+
+
+df_raw$year <- as.factor(df_raw$year)
+# plotting with ggplot2
+
+ggplot() + geom_boxplot(df_raw %>% filter(type=="prevision"), mapping=aes(x=year, y=value), color="#dd1c77")+
+  geom_point(df_raw %>% filter(type=="ref"), mapping=aes(x=year, y=value), color="#2ca25f")+
+  #scale_colour_manual(name="Error Bars",values=cols) + scale_fill_manual(name="Bar",values=cols)
+  labs(title = paste0(indicateur, " MJJASO spatial means"), x="Year", y= "Value")+
+      theme_bw()+
+       scale_x_discrete(breaks = scales::pretty_breaks(n = 12))
+
+
+# value of global difference
+#df_raw %>% group_by(type) %>% summarise(mean_ps=mean(value))
+
+```
+
+## Plot ensemble mean and spread vs observation
+
+```{r }
+
+
+df_psmean <- data.frame() # table with: type - year - value(ensemble mean)
+df_quant <- data.frame() # table with: type - year - value(ensemble quantiles)
+df_ref <- data.frame() # table with: type - year - value(ensemble quantiles)
+
+for (y in 1:nan){
+  
+  df_quant <- rbind(df_quant, data.frame(year=an[y], value = ps_original[maille, y, ]))
+  df_psmean <- rbind(df_psmean, data.frame(year=an[y], value = ps_ensmean[maille, y]))
+  df_ref <- rbind(df_ref, data.frame(year=an[y], value = ref_original[maille, y]))
+}
+
+# reference terciles
+ter1_ref <- as.numeric(quantile(ref_original[maille, ], probs = 1/3))
+ter3_ref <- as.numeric(quantile(ref_original[maille, ], probs = 2/3))
+
+# ps terciles
+ter1_ps <- as.numeric(quantile(ps_original[maille,,], probs = 1/3))
+ter3_ps <- as.numeric(quantile(ps_original[maille,,], probs = 2/3))
+
+# plot with ggplot2
+p <- ggplot(df_quant, aes(x=year, y=value)) + 
+  labs(title = paste0(indicateur, " MJJASO grid ", maille), x="Year", y= "Value")+
       theme_bw()+
        scale_x_continuous(breaks = scales::pretty_breaks(n = 12))
 
-# calculating mean differences
-df_raw %>% group_by(type) %>% summarise(mean_ps=mean(value))
-
-```
-## Plotting seasonal prevision and observation
-
-Attention sum ou mean selon indicateur!
-
-```{r }
-  ## parameters ##
-y <- 1
-
-  ## plot ## 
-
-ps_season_int <- apply(ps_original, c(1,2,3), sum)
-ps_season <- apply(ps_season_int, c(1,2), mean)
-ref_season_int <- apply(ref_original, c(1,2), sum)
-ref_season <- apply(ref_season_int, c(1,2), mean)
-tercile_bound <- as.numeric(quantile(ref_season, prob = 1:2/3))
-
-test_df <- as.data.frame(cbind(ps_season[,y],ref_season[,y]))
-colnames(test_df) <- c("prevision","ref")
-PlotForecastPDF(test_df,tercile_bound, add.ensmemb = 'no', var.name = paste0(indicateur,"(mm)"),title = paste0(indicateur," year ", an[y]))
-
+## with geom_fan extra
+p + geom_fan(data=df_quant, intervals=c(1,0.1), show.legend = FALSE) + 
+  geom_line(data=df_ref, mapping=aes(x=year,y=value), color="#a1d99b", size=1, show.legend = TRUE) +
+  geom_hline(yintercept=ter1_ref, linetype="dashed", color = "#a1d99b", size=0.4) +
+  geom_hline(yintercept=ter3_ref, linetype="dashed", color = "#a1d99b", size=0.4) +
+  geom_line(data=df_psmean, mapping=aes(x=year,y=value), color="#f03b20", size=1) +
+  geom_hline(yintercept=ter1_ps, linetype="dashed", color = "#f03b20", size=0.4) +
+  geom_hline(yintercept=ter3_ps, linetype="dashed", color = "#f03b20", size=0.4)
 
 
 ```
